# tapi2p

./: .gitignore  .gitmodules  AES.cpp  AES.h  CMakeLists.txt  Config.cpp  Config.h  Event.h  Key.cpp  Key.h  KeyException.h  KeyGenerator.cpp  KeyGenerator.h  PathManager.cpp  PathManager.h  Peer.h  PeerManager.cpp  PeerManager.h  PipeManager.cpp  PipeManager.h  PrivateKey.cpp  PrivateKey.h  PublicKey.cpp  PublicKey.h  README.md  chat.cpp  configtest.cpp  core.cpp  core.h  main.cpp  main.rs  ui.cpp  ui.h
cmake/modules/: FindJansson.cmake  FindWebsockets.cmake
core/: CMakeLists.txt  config.c  config.cpp  config.h  core.c  core.cpp  core.h  core.rs  coreutils.rs  event.c  event.h  event.rs  file.c  file.h  filetransfermanager.c  filetransfermanager.h  handlers.c  handlers.h  handlers.rs  main.c  main.cpp  pathmanager.c  pathmanager.cpp  pathmanager.h  peer.c  peer.h  peer.rs  peermanager.c  peermanager.cpp  peermanager.h  pipemanager.c  pipemanager.cpp  pipemanager.h  ptrlist.c  ptrlist.h  util.c  util.h
crypt/: aes.c  aes.cpp  aes.h  key.c  key.cpp  key.h  keygen.c  keygen.h  keygenerator.cpp  privatekey.c  privatekey.cpp  privatekey.h  publickey.c  publickey.cpp  publickey.h
crypto/: aes.c  aes.h  key.h  keygen.c  keygen.rs  privatekey.c  privatekey.h  publickey.c  publickey.h
test/: CMakeLists.txt  config.test.c  crypt.test.c  crypto.test.c  peermanager.test.c
ui/: CMakeLists.txt
ui/cli/: CMakeLists.txt  cli.c
ui/curses_ui/: CMakeLists.txt  curses_ui.cpp  curses_ui.h  tapi2pc.cpp
ui/gui/: tapi2pgui.py
ui/web/: CMakeLists.txt  index.html
ui/web/build-utils/: CMakeLists.txt  tapi2p-js-backend-replace-enum.sh
ui/web/css/: side-menu.css
ui/web/js/: tapi2p-backbone.js  tapi2p-backend.js  tapi2p.js  ui.js
ui/web/server/: CMakeLists.txt  tapi2p_websocket.c
