cmake_minimum_required(VERSION 2.8)
project(test)
#include_directories(${PROJECT_SOURCE_DIR}/core)
include_directories($OpenSSL_INCLUDE_DIRS)
add_definitions(-std=c99 -D_GNU_SOURCE -g3 -Wall -Wextra)
add_executable(configtest config.test.c ../core/config.c)
add_executable(peermanagertest peermanager.test.c ../core/peermanager.c ../core/peer.c ../crypt/publickey.c ../crypt/key.c)
target_link_libraries(peermanagertest ssl crypto pthread)
