cmake_minimum_required(VERSION 2.8)
project(test)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../dist/test)
#include_directories(${PROJECT_SOURCE_DIR}/core)
include_directories($OpenSSL_INCLUDE_DIRS)
add_definitions(-std=c99 -D_GNU_SOURCE -g3 -Wall -Wextra)
add_executable(peermanagertest peermanager.test.c ../core/peermanager.c ../core/peer.c ../crypto/publickey.c ../crypto/key.c)
add_executable(cryptotest crypto.test.c ../crypto/key.c ../crypto/keygen.c ../crypto/privatekey.c ../crypto/publickey.c ../crypto/aes.c)
target_link_libraries(peermanagertest ssl crypto pthread)
target_link_libraries(cryptotest ssl crypto pthread)
